# MonteCrystal

./: .gitignore  3rdPartyLicense.txt  CMakeLists.txt  README.md  SimulationSoftware.sln  git.cmake  lighting.frag  resources.qrc
QtTest/: AbsoluteMagnetisationObservable.cpp  AbsoluteMagnetisationObservable.h  AnisotropyWindow.h  BiquadraticInteraction.cpp  ColorsWindow.cpp  ColorsWindow.h  Configuration.cpp  Configuration.h  Converger1.h  CustomTableWidget.cpp  CustomTableWidget.h  DMInteraction.cpp  DMInteraction.h  DMInteractionDefect.cpp  DipolarInteraction.cpp  Energy.h  EnergyObservable.cpp  EnergyObservable.h  ExchangeInteraction.cpp  ExchangeInteraction.h  ExchangeInteractionDefect.cpp  ExcitationFrequencyWindow.cpp  ExcitationFrequencyWindow.h  ExcitationModeSolver.cpp  ExcitationModeSolver.h  ExcitationVisualization.cpp  ExcitationVisualization.h  Experiment01Window.cpp  FourSpinInteraction.cpp  FourSpinInteraction.h  Functions.cpp  Functions.h  GUIEnergyElements.cpp  GUIEnergyElements.h  GUILatticeElements.cpp  GUILatticeElements.h  GUIOutputElements.h  GUIProgramTypeElement.h  GUISimulationProcedureElements.cpp  GUISimulationProcedureElements.h  (+71 more)
QtTest/GeneratedFiles/: qrc_qttest.cpp  ui_anisotropy.h  ui_colors.h  ui_excitationfrequencywindow.h  ui_experiment01.h  ui_ferromagnet.h  ui_latticemaskwindow.h  ui_mainWindow.h  ui_markedspinsrequestwindow.h  ui_skyrmion.h  ui_spinspiral.h  ui_workfolder.h
cmaps/: BlGrRe  BlWiRe  browns  hsv  plasma  seismic  viridis
includes/: AbsoluteMagnetisationObservable.h  AnisotropyWindow.h  AtomsWindow.h  BiquadraticInteraction.h  CMap.h  CameraWindow.h  ColorsWindow.h  Configuration.h  CustomTableWidget.h  DMInteraction.h  DMInteractionDefect.h  DipolarInteraction.h  Energy.h  EnergyObservable.h  ExchangeInteraction.h  ExchangeInteractionDefect.h  ExcitationFrequencyWindow.h  Experiment01Window.h  FerromagnetWindow.h  FourSpinInteraction.h  Functions.h  GUIEnergyElements.h  GUILatticeElements.h  GUIOutputElements.h  GUIProgramTypeElement.h  GUISimulationProcedureElements.h  GUISpinElements.h  Hamiltonian.h  HexagonalAnisotropyEnergy.h  Lattice.h  LatticeMaskWindow.h  MagnetisationObservable.h  MainWindow.h  MarkedSpinsHandler.h  MarkedSpinsRequestWindow.h  Metropolis.h  ModulatedAnisotropyEnergy.h  ModulatedExchangeInteraction.h  MyMath.h  NCMRContrastObservable.h  (+42 more)
src/: AbsoluteMagnetisationObservable.cpp  AnisotropyWindow.cpp  AtomsWindow.cpp  BiquadraticInteraction.cpp  CMap.cpp  CameraWindow.cpp  ColorsWindow.cpp  Configuration.cpp  Converger1.cpp  CustomTableWidget.cpp  DMInteraction.cpp  DMInteractionDefect.cpp  DipolarInteraction.cpp  Energy.cpp  EnergyObservable.cpp  ExchangeInteraction.cpp  ExchangeInteractionDefect.cpp  ExcitationFrequencyWindow.cpp  ExcitationModeSolver.cpp  ExcitationVisualization.cpp  FerromagnetWindow.cpp  FourSpinInteraction.cpp  Functions.cpp  GUIEnergyElements.cpp  GUILatticeElements.cpp  GUIOutputElements.cpp  GUIProgramTypeElement.cpp  GUISimulationProcedureElements.cpp  GUISpinElements.cpp  Hamiltonian.cpp  HexagonalAnisotropyEnergy.cpp  Lattice.cpp  LatticeMaskWindow.cpp  MagnetisationObservable.cpp  MainWindow.cpp  MarkedSpinsHandler.cpp  MarkedSpinsRequestWindow.cpp  Mersenne.cpp  Mesh.cpp  Metropolis.cpp  (+36 more)
